<resources>
    <string name="app_name">PetCare</string>
    <string name="pet_care">PetCare</string>
    <string name="pet_registration_form">Pet Registration Form</string>
    <string name="microchip_id">Microchip ID</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="neutered">Neutered</string>
    <string name="is_neutered">Is Neutered?</string>
    <string name="reset">RESET</string>
    <string name="submit">SUBMIT</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="access_code">Access Code</string>
    <string name="none_none_com">none@none.com</string>
    <string name="email_address">Email Address</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>

    <string-array name="breed_array">
        <item>N/A</item>
        <item>Husky</item>
        <item>Lab</item>
        <item>Poodle</item>
        <item>Rottweiler</item>
        <item>Chihuahua</item>
        <item>German Shepherd</item>
        <item>Golden Retriever</item>
    </string-array>

    <string-array name="ID_array">
        <item>K39BD3L</item>
        <item>MM30R54</item>
        <item>Q94JFFD9</item>
        <item>Q945KYL</item>
        <item>09NFEWN23D</item>
    </string-array>
</resources>