<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pet_care"
        android:layout_gravity="center"
        android:textSize="15sp"
         />

    <TextView
        android:id="@+id/pet_registration_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pet_registration_form"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/microchip_id"
                style="@style/base"
                android:layout_marginTop="50dp"
                android:text="@string/microchip_id" />

            <TextView
                android:id="@+id/name"
                style="@style/base"
                android:text="@string/name" />

            <TextView
                android:id="@+id/gender"
                style="@style/base"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/email_address"
                style="@style/base"
                android:text="@string/email_address" />

            <TextView
                android:id="@+id/access_code"
                style="@style/base"
                android:text="@string/access_code" />

            <TextView
                android:id="@+id/confirm_code"
                style="@style/base"
                android:hint=""
                android:text="@string/confirm_code" />

            <TextView
                android:id="@+id/breed"
                style="@style/base"
                android:text="@string/breed" />

            <TextView
                android:id="@+id/neutered"
                style="@style/base"
                android:text="@string/neutered" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp">

            <EditText
                android:id="@+id/edit_microchip"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:hint="ID"
                android:inputType="text"
                android:text=""
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:inputType="textAutoCorrect|textPersonName"
                android:text="" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonSelected"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonSelected"
                    android:text="@string/female" />


            </RadioGroup>

            <EditText
                android:id="@+id/edit_email_address"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/none_none_com"
                android:inputType="textEmailAddress"
                android:text="" />

            <EditText
                android:id="@+id/edit_access_code"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:inputType="numberPassword"
                android:text="" />

            <EditText
                android:id="@+id/edit_confirm_code"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint=""
                android:inputType="numberPassword"
                android:text="" />

            <Spinner
                android:id="@+id/select_breed"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="30dp" />

            <CheckBox
                android:id="@+id/is_neutered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/is_neutered" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            android:onClick="ResetClicked"
            android:text="@string/reset" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            android:onClick="SubmitClick"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>